--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         <a href="http://">Youtube</a>
         </li>
         </ul>
+        <div class="conmini">
+        <button class="boton" onclick="cambiar()">Invertir pronombres</button></div>
     </div>
         </div>
-
-        <button class="boton" onclick="cambiar()">Invertir pronombres</button>
+        
         <footer class="fot">2025 Gabriela Saldaña</footer>
     </div>
      
